# cargo-bloated

./: Cargo.toml  README.md  flake.nix
src/: analyze.rs  linker_map.rs  main.rs
