[package]
name = "cargo-bloated"
version = "0.1.0"
edition = "2024"
description = "Find out what takes most of the space in your executable, more accurately"
repository = "https://github.com/oxalica/cargo-bloated"
license = "MIT OR Apache-2.0"
categories = ["development-tools::cargo-plugins"]
keywords = ["bloat", "size"]

[dependencies]
anstream = "0.6.18"
anyhow = "1.0.98"
cargo_metadata = "0.19.2"
clap = { version = "4.5.37", features = ["derive"] }
color-print = "0.3.7"
goblin = "0.9.3"
itertools = "0.14.0"
regex-lite = "0.1.6"
rustc-demangle = "0.1.24"
syn = { version = "2.0.101", default-features = false, features = ["derive", "parsing", "visit"] }
tempfile = "3.19.1"
which = "7.0.3"

[lints.clippy]
# Use ANSI-aware failable write instead.
print_stdout = "warn"
print_stderr = "warn"

[profile.release]
lto = true
strip = true
